First version of the complete functional program